Upgrade to nodejs v18

--- a/client/src/styles/quasar.sass
+++ b/client/src/styles/quasar.sass
@@ -3,8 +3,8 @@
 // @import '~quasar-addon-styl'
 
 #app 
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Avenir, Helvetica, Arial, sans-serif
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
   color: #202020
 
